--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ body{
 .email.not-valid{
     background: white;
     border-radius: unset;
+    padding-bottom: 0px;
     border-bottom: 2px dashed red;
 }
 .email .remove {
